# tap-shopify

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  install_local.sh  pyproject.toml  requirements.txt  sample_config.json  setup.py
.circleci/: config.yml
spikes/async/: first_comparison.py  orders-schema.json  original_tap.py  page_async_tap.py  sidd_async_tap.py  sidd_endpoint_tap.py  tester.py
spikes/batch-multiple-streams/: test.sh
spikes/generate-dummy-data/: generate-transactions.py
spikes/orders_updates/: transactions_updates.py
spikes/rate-limiting/: dev_account_object_counts.py  requests_rate_limit.py  sdk_rate_limit.py
spikes/since_id/: abandoned_checkouts.py  orders.py
tap_shopify/: __init__.py  client.py  context.py  exceptions.py  remember_errors_backoff.py  rule_map.py
tap_shopify/schemas/: abandoned_checkouts.json  application_charges.json  application_credits.json  article_authors.json  article_tags.json  balance_transactions.json  blogs.json  carrier_services.json  collections.json  collects.json  comments.json  currencies.json  custom_collections.json  customer_journey.json  customer_visit.json  customers.json  (+40 more)
tests/: base.py  sync_rows.py  test_all_fields.py  test_automatic_fields.py  test_bookmarks.py  test_bookmarks_metafields.py  test_bookmarks_updated.py  test_discovery.py  test_end_date.py  test_full_replication.py  test_interrupted_sync.py  test_min_bookmark.py  test_pagination.py  test_shop_info_fields.py  test_start_date.py  test_start_date_and_bookmark.py  test_sub_streams.py  test_transaction_canonicalize.py
(+90 files in other folders)
