[tool.poetry]
name = "tap-shopify"
version = "1.1.12"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
ShopifyAPI = "~3.1.0"
singer-python = "~5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
